laravel/laravel.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: laravel
  name: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      run: laravel
  template:
    metadata:
      labels:
        run: laravel
    spec:
      containers:
      - name: laravel
        image: bsctl/laravel:latest
        imagePullPolicy: Always
        resources:
          requests:
          limits:
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 1
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
