laravel/laravel-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel
  labels:
    run: laravel
spec:
  ports:
  - protocol: TCP
    name: http
    port: 3000
    targetPort: 3000
  selector:
    run: laravel
  type: ClusterIP
