laravel/laravel-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: laravel
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: user00.kube.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: laravel
          servicePort: 3000
